# mnm-dps-meter

./: Cargo.toml  README.md  SPEC.md
docs/pipeline/: 00-architecture-overview.md  01-docs-first-workflow.md  02-atomicity-model.md  03-context-management.md  micro-app-build-profile.md
src/: capture.rs  config.rs  dedup.rs  main.rs  ocr.rs  overlay.rs  panel.rs  parser.rs  pipeline.rs  session.rs  tick.rs  types.rs  ui.rs
